--- a/LethalCompanyTemplate/LethalCompanyTemplate.csproj
+++ b/LethalCompanyTemplate/LethalCompanyTemplate.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <AssemblyName>LethalCompanyTemplate</AssemblyName>
-        <Description>A template for Lethal Company</Description>
+        <AssemblyName>JBLM</AssemblyName>
+        <Description>JB Lethal Mod</Description>
         <Version>1.0.0</Version>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
@@ -18,5 +18,29 @@
 
     <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
         <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Reference Include="0Harmony">
+            <HintPath>C:\Users\JBWol\AppData\Roaming\Thunderstore Mod Manager\DataFolder\LethalCompany\profiles\testmod\BepInEx\core\0Harmony.dll</HintPath>
+        </Reference>
+        <Reference Include="Assembly-CSharp">
+            <HintPath>E:\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Assembly-CSharp.dll</HintPath>
+        </Reference>
+        <Reference Include="BepInEx">
+            <HintPath>C:\Users\JBWol\AppData\Roaming\Thunderstore Mod Manager\DataFolder\LethalCompany\profiles\testmod\BepInEx\core\BepInEx.dll</HintPath>
+        </Reference>
+        <Reference Include="LethalLib">
+            <HintPath>C:\Users\JBWol\AppData\Roaming\Thunderstore Mod Manager\DataFolder\LethalCompany\profiles\testmod\BepInEx\plugins\Evaisa-LethalLib\LethalLib\LethalLib.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine">
+            <HintPath>E:\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\UnityEngine.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.CoreModule">
+            <HintPath>E:\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+        </Reference>
+        <Reference Include="Unity.Netcode.Runtime">
+            <HintPath>C:\Users\JBWol\Documents\JBLM\LethalCompanyTemplate\bin\Debug\netstandard2.1\Unity.Netcode.Runtime.dll</HintPath>
+        </Reference>
     </ItemGroup>
 </Project>
