--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,30 @@ crashlytics-build.properties
 .idea/*
 .idea
 .idea\
+LethalCompanyTemplate/obj/rider.project.restore.info
+LethalCompanyTemplate/bin/Debug/netstandard2.1/ClientNetworkTransform.dll
+*.dll
+LethalCompanyTemplate/bin/Debug/netstandard2.1/JBLM.deps.json
+*.dll
+LethalCompanyTemplate/bin/Debug/netstandard2.1/JBLM_original.dll
+LethalCompanyTemplate/bin/Debug/netstandard2.1/JBLM.dll
+LethalCompanyTemplate/obj/Debug/netstandard2.1/LethalCompanyTemplate.sourcelink.json
+LethalCompanyTemplate/obj/Debug/netstandard2.1/LethalCompanyTemplate.GeneratedMSBuildEditorConfig.editorconfig
+LethalCompanyTemplate/obj/Debug/netstandard2.1/LethalCompanyTemplate.csproj.FileListAbsolute.txt
+LethalCompanyTemplate/obj/LethalCompanyTemplate.csproj.nuget.dgspec.json
+LethalCompanyTemplate/obj/LethalCompanyTemplate.csproj.nuget.g.props
+LethalCompanyTemplate/obj/LethalCompanyTemplate.csproj.nuget.g.targets
+LethalCompanyTemplate/obj/project.assets.json
+LethalCompanyTemplate/obj/project.nuget.cache
+LethalCompanyTemplate/obj/project.packagespec.json
+LethalCompanyTemplate/obj/rider.project.model.nuget.info
+LethalCompanyTemplate/obj/Debug/netstandard2.1/LethalCompanyTemplate.csproj.CoreCompileInputs.cache
+LethalCompanyTemplate/obj/Debug/netstandard2.1/LethalCompanyTemplate.csproj.AssemblyReference.cache
+LethalCompanyTemplate/obj/Debug/netstandard2.1/LethalCompanyTemplate.AssemblyInfoInputs.cache
+LethalCompanyTemplate/obj/Debug/netstandard2.1/LethalCompanyTemplate.AssemblyInfo.cs
+LethalCompanyTemplate/obj/Debug/netstandard2.1/.NETStandard,Version=v2.1.AssemblyAttributes.cs
+LethalCompanyTemplate/bin/Debug/netstandard2.1/JBLM.dll
+LethalCompanyTemplate/bin/Debug/netstandard2.1/JBLM_original.dll
+LethalCompanyTemplate/obj/Debug/netstandard2.1/LethalCompanyTemplate.csproj.CopyComplete
+LethalCompanyTemplate/bin/Debug/netstandard2.1/JBLM_original.dll
+LethalCompanyTemplate/obj/Debug/netstandard2.1/PluginInfo.cs
